# go-bazel-fullstack-template

./: .env  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  install-bazel.sh  repositories.bzl  tsconfig.json
cmd/helloworld/: BUILD.bazel  main.go
pkg/hello/: BUILD.bazel  hello.go  hello_test.go
project/: .bazelproject
src/hello/: BUILD.bazel  go.mod  main.go  main_test.go
tools/bazel/js/: esbuild.bzl  esbuild_repo.bzl
tools/bazel/rules/: sass_deps.bzl
web/: package-lock.json  package.json
web/app/: BUILD.bazel  index.html
web/app/public/: BUILD.bazel  index.html
web/app/src/: App.tsx  BUILD.bazel  index.scss  index.tsx
web/app/src/components/App/: App.scss  App.tsx  BUILD.bazel
web/app/src/libs/web-vitals/: BUILD.bazel
web/app/tests/components/App/: App.test.tsx  BUILD.bazel
