load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "go-bazel-fullstack-template/src/hello",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["main_test.go"],
    embed = [":hello_lib"],
    deps = ["@com_github_theothertomelliott_must//:must"],
)
