load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("@npm//http-server:index.bzl", "http_server")

pkg_web(
    name = "dist",
    additional_root_paths = ["web/app/src"],
    srcs = [
        ":index.html",
        "//web/app/src:bundle",
        "//web/app/src:styles",
    ] + glob(["public/**"])
)

http_server(
    name = "server",
    data = [
        ":dist"
    ],
    templated_args = ["./web/app/dist"],
)
