load("//tools/bazel/js:esbuild.bzl", "esbuild")
load("@npm//@bazel/typescript:index.bzl", "ts_library")


ts_library(
    name = "lib",
    srcs = glob(
        ["*.ts","*.tsx"]
    ),
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@testing-library/jest-dom",
        "@npm//@testing-library/react",
        "@npm//@testing-library/user-event",
        "@npm//react",
        "@npm//react-dom",
        "@npm//web-vitals",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "index.ts",
    args = ["--keep-names"],
    minify = True,
    define = [
        "process.env.NODE_ENV=\"production\""
    ],
    deps = [
        ":lib",
    ],
)