package(default_visibility = ["//visibility:public"])
load("//tools/bazel/js:esbuild.bzl", "esbuild")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools/bazel/rules:sass.bzl", "sass_library", "sass_binary")

ts_library(
    name = "lib",
    srcs = glob(
        ["*.ts","*.tsx"]
    ),
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//@testing-library/jest-dom",
        "@npm//@testing-library/react",
        "@npm//@testing-library/user-event",
        "@npm//react",
        "@npm//react-dom",
        "@npm//web-vitals",
    ],
)

sass_library(
    name = "sass_lib",
    srcs = ["App.scss"]
)

sass_binary(
    name = "styles",
    src = "index.scss",
    out = "main.css",
    deps = [
        ":sass_lib"
    ]
)

esbuild(
    name = "bundle",
    entry_point = "index.ts",
    args = [
        "--keep-names",
    ],
    minify = True,
    define = [
        "process.env.NODE_ENV=\"production\""
    ],
    deps = [
        ":lib",
    ],
)