package(default_visibility = ["//visibility:public"])
load("//tools/bazel/rules:sass.bzl", "sass_library", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools/bazel/js:esbuild.bzl", "esbuild")

sass_binary(
    name = "styles",
    src = "index.scss",
    out = "styles.css",
    deps = [
        "//web/app/src/components/App:sass_lib"
    ]
)

ts_library(
    name = "ts_lib",
    srcs = glob(
        ["*.ts","*.tsx"]
    ),
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
        "//web/app/src/components/App:ts_lib",
        "//web/app/src/libs/web-vitals:ts_lib"
    ],
)


esbuild(
    name = "bundle",
    entry_point = "index.ts",
    args = [
        "--keep-names",
    ],
    minify = True,
    define = [
        "process.env.NODE_ENV=\"production\""
    ],
    deps = [
        ":ts_lib"
    ],
)